remove /images/ from image urls, add rgb[] colors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       items.forEach(function (item) {
         $('#top-sites').append(`
           <div class="site" style="background-color: ${item.background_color};">
-            <img src="${item.image_url}">
+            <img src="images/${item.image_url}">
             <a href="${item.url}" class="title">${item.title}</a>
           </div>
         `);
